// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit should render the component with custom title 1`] = `
Array [
  <fieldset
    className="divider-block"
  >
    <legend
      aria-hidden="true"
    >
      Custom Title
    </legend>
    <div
      className="styled-dividerBlock"
    >
      <div
        className="ui divider"
      />
    </div>
  </fieldset>,
  <div
    id="sidebar-portal"
  >
    <div
      data-testid="block-data-form"
    >
      <button
        data-testid="trigger-change"
        onClick={[Function]}
      >
        Change
      </button>
    </div>
  </div>,
]
`;

exports[`Edit should render the component with default title message 1`] = `
Array [
  <fieldset
    className="divider-block"
  >
    <legend
      aria-hidden="true"
    >
      Divider
    </legend>
    <div
      className="styled-dividerBlock"
    >
      <div
        className="ui divider"
      />
    </div>
  </fieldset>,
  <div
    id="sidebar-portal"
  >
    <div
      data-testid="block-data-form"
    >
      <button
        data-testid="trigger-change"
        onClick={[Function]}
      >
        Change
      </button>
    </div>
  </div>,
]
`;
